@@ -7,6 +7,9 @@ New features
   better adaptation to production contexts.
 Bug fixes
 ~~~~~~~~~
+- Made sure the CPS session cookie applies from the root path, because the first
+  authentication may have come from a sub-path such as
+  /workspaces/somewhere-below.
 - Fixed the fact that the tool XML configuration file was never used.
 - Hardened logout.
 New internal features
